Implement JWT authentication, remove RoleRepository, add Auth DTOs and services