@@ -1,32 +1,32 @@
 package ua.com.reactive.lashkov_lab.entity;
 
 import lombok.Data;
+import lombok.NoArgsConstructor;
 import org.springframework.data.annotation.Id;
-import org.springframework.data.relational.core.mapping.Column;
 import org.springframework.data.relational.core.mapping.Table;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.math.BigDecimal;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Data
+@NoArgsConstructor
 @Table("users")
 public class User implements UserDetails {
     @Id
     private Long id;
-    
     private String username;
     private String password;
-    private Double balance;
-    
-    @Column("role_id")
+    private String email;
     private Role role;
+    private BigDecimal balance = BigDecimal.ZERO;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(role.getName()));
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
